[Server} - starting /auth/register endpoint
