# server/app/controllers/authController.js
@@ -1,5 +1,6 @@
 const Isemail = require('isemail');
 const ResponseHelper = require('../utils/responseHelper');
+const Crypto = require('../utils/crypto');
 
 /**
  * Handlers for /auth endpoints
@@ -18,11 +19,28 @@ class AuthController {
       ResponseHelper.badRequest(req, res, "The email's format is not valid");
       return;
     }
+  }
 
-    console.log('dentor');
+  /**
+   * Handler for /auth/register
+   * @param {Request} req
+   * @param {Response} res
+   */
+  static async registerUser(req, res) {
+    const payload = req.body;
+
+    const isValidEmail = Isemail.validate(payload.email);
+    if (!isValidEmail) {
+      ResponseHelper.badRequest(req, res, "The email's format is not valid");
+      return;
+    }
+
+    payload.password = await Crypto.hashPassword(payload.password);
+    console.log('payload', payload);
   }
 }
 
 module.exports = {
   loginUser: AuthController.loginUser,
+  registerUser: AuthController.registerUser,
 };
